# ClassSystem666

./: CMakeLists.txt  CMakeLists.txt.user.0c2922b  Test1.xlsx  classdata.cpp  classdata.h  classdata.ui  classes.h  classnumbersetform.cpp  classnumbersetform.h  classnumbersetform.ui  classset.cpp  classset.h  classset.ui  form.cpp  form.ui  main.cpp  printAPI.cpp  printAPI.h  printerclassesresult.cpp  printerclassesresult.h  printerclassesresult.ui  rec.qrc  startclassform.cpp  startclassform.h  startclassform.ui  student.cpp  student.h  widget.cpp  widget.h  ~$Test1.xlsx  分班数据导出.xlsx
exportFile/: f1_20250705_164050.xlsx  f1_20250705_164620.xlsx  f1_20250705_164915.xlsx  f1_20250705_165736.xlsx  f1_20250705_165819.xlsx  f1_20250705_170646.xlsx  f1_20250705_170849.xlsx  f1_20250705_171029.xlsx  f1_20250705_171516.xlsx  f1_20250705_175121.xlsx  f1_20250705_181534.xlsx  f1_20250705_182134.xlsx  f1_20250705_182406.xlsx  f1_20250705_183450.xlsx  f1_20250705_185521.xlsx  f1_20250705_185954.xlsx  f1_20250705_194320.xlsx  f1_20250705_194918.xlsx  f1_20250705_195248.xlsx  f1_20250705_195856.xlsx  f1_20250705_200312.xlsx  f1_20250706_085114.xlsx  f1_20250706_090540.xlsx  f1_20250706_090636.xlsx  f1_20250706_093943.xlsx  f1_20250706_152226.xlsx  f1_20250706_164236.xlsx  f1_20250706_164559.xlsx  f1_20250706_170411.xlsx  f1_20250706_171100.xlsx  f1_20250706_172231.xlsx  f1_20250706_172619.xlsx  f1_20250706_174244.xlsx  f1_20250706_174605.xlsx  f1_20250706_174914.xlsx  f1_20250706_175942.xlsx  f1_20250707_110815.xlsx  f1_20250709_130640.xlsx  f1_20250709_172234.xlsx  f1_20250709_172407.xlsx  (+52 more)
